--- a/templates/f4fitness/about.html
+++ b/templates/f4fitness/about.html
@@ -89,7 +89,7 @@
                              and a welcoming environment that fosters dedication and community. At F4FITNESS, we’re about transforming lives
                              and helping you achieve your full potential. Join us and take the first step toward a stronger, healthier, and more confident you!
                          </p>
-                        <a href="courses.html" class="border-btn"> Courses</a>
+                        <a href="{% url  'uplan' %}"  class="border-btn"> Courses</a>
                     </div>
                 </div>
             </div>
