--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -93,6 +93,15 @@
             flex-grow: 1;
             padding: 20px;
         }
+        .container1 {
+            background-color: rgba(11, 3, 57, 0.1);
+            padding: 10px;
+            width: 1000px;
+            border-radius: 15px;
+            box-shadow: 0 4px 8px rgba(99, 9, 1, 0.1);
+            text-align: center;
+            transition: transform 0.3s ease;
+          }
     </style>
 </head>
 <body>
@@ -119,6 +128,9 @@
 
         <div class="main-content">
             {% block content %}
+            <div class="container1">
+                <h1>welcome to Admin Dashboard</h1>
+              </div>
             <!-- Main content will go here -->
             {% endblock %}
         </div>
