--- a/templates/f4fitness/offline_usermangement.html
+++ b/templates/f4fitness/offline_usermangement.html
@@ -101,7 +101,7 @@
     <div class="navbar">
         <h1> Offline User Management</h1>
         <div>
-            <a href="">Dashboard</a>
+            <a href="{% url 'admin_dashboard'%}">Dashboard</a>
             {% comment %} <a href="{% url 'logout' %}">Logout</a> {% endcomment %}
         </div>
     </div>
