--- a/templates/f4fitness/plan_management.html
+++ b/templates/f4fitness/plan_management.html
@@ -26,7 +26,11 @@
             margin: 0;
             font-size: 24px;
         }
-        .add-plan-btn {
+        .btn-group {
+            display: flex;
+            gap: 10px;
+        }
+        .add-plan-btn, .new-btn {
             background-color: #28a745;
             color: #fff;
             border: none;
@@ -34,8 +38,9 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            text-align: center;
         }
-        .add-plan-btn:hover {
+        .add-plan-btn:hover, .new-btn:hover {
             background-color: #218838;
         }
         .container {
@@ -102,8 +107,13 @@
 <body>
     <div class="header">
         <h1>Plan Management</h1>
-        <a class="add-plan-btn" href="{% url 'addplans'%}">Add Plan</a>
+        <div class="btn-group">
+            <a class="add-plan-btn" href="{% url 'addplans' %}">Add Plan</a>
+            <!-- New Button Inside Add Plan -->
+            <a class="new-btn" href="{% url 'admin_dashboard' %}">Back To Dashboard</a>
+        </div>
     </div>
+
     <div class="container">
         {% for plan in plans %}
         <div class="card">
@@ -116,7 +126,7 @@
             </div>
             <div class="card-buttons">
                 <a href="{% url 'edit_plans' plan.id %}" class="edit-btn btn">Edit</a>
-                <a href="{% url 'delete_plan' plan.id  %}" class="delete-btn btn" style="width:70px" >Delete</a>
+                <a href="{% url 'delete_plan' plan.id %}" class="delete-btn btn" style="width:70px">Delete</a>
             </div>
         </div>
         {% endfor %}
