--- a/templates/f4fitness/productmanagement.html
+++ b/templates/f4fitness/productmanagement.html
@@ -26,7 +26,11 @@
             margin: 0;
             font-size: 24px;
         }
-        .add-Supplement-btn {
+        .btn-group {
+            display: flex;
+            gap: 10px;
+        }
+        .add-Supplement-btn, .new-btn {
             background-color: rgb(22, 204, 25);
             color: #fff;
             border: none;
@@ -36,7 +40,7 @@
             font-size: 16px;
             text-decoration: none;
         }
-        .add-Supplement-btn:hover {
+        .add-Supplement-btn:hover, .new-btn:hover {
             background-color: #218838;
         }
         .container {
@@ -104,7 +108,12 @@
 <body>
     <div class="header">
         <h1>Product Management</h1>
-        <a class="add-Supplement-btn" href="{% url 'addsupplement' %}">Add Products</a>
+        <!-- Button Group for Add Products -->
+        <div class="btn-group">
+            <a class="add-Supplement-btn" href="{% url 'addsupplement' %}">Add Products</a>
+            <!-- New Button Inside Add Products -->
+            <a class="new-btn" href="{% url 'admin_dashboard' %}">Back to Dashboard</a>
+        </div>
     </div>
     <div class="container">
         {% for supplement in product %}
@@ -124,7 +133,5 @@
         </div>
         {% endfor %}
     </div>
-    
-    
 </body>
 </html>
