--- a/templates/userbase.html
+++ b/templates/userbase.html
@@ -135,6 +135,7 @@
                 {% endif %}
                 <li><a href="{% url 'chatbot' %}">Chat Bot</a></li>
                 <li><a href="{% url 'my_attendance' %}">My Attendance</a></li>
+                <li><a href="{% url 'bmi_calculator' %}">BMI</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
 
             </ul>
